2007-04-16 [paul]	1.95.0

	1.95 released

2007-04-16 [paul]	1.94.0cvs12

	* po/ca.po
	* po/es.po
	* po/hu.po
	* po/pt_BR.po
	* po/sr.po
	* po/zh_CN.po
		updated by Miquel Oliete, Ricardo Mones Lastra,
		Pader Rezso, Frederico Goncalves Guimaraes,
		Aleksandar Urosevic, and Ralgh Young

2007-04-12 [colin]	1.94.0cvs11

	* src/vcal_meeting_gtk.c
		Better layout on Maemo. Patch by Jean-Luc
		Biord, slightly modified. The notebook
		tabs titles ("Event:" and "Time:" will 
		have to be updated later after string
		freeze is over)

2007-04-07 [colin]	1.94.0cvs10

	* src/plugin.c
		No need to translate mime-type. Thanks to
		Pascal Terjan

2007-03-31 [colin]	1.94.0cvs9

	* src/plugin.c
	* src/vcal_folder.c
		Offline override: follow API

2007-03-27 [wwp]	1.94.0cvs8

	* src/vcalendar.c
		Don't answer if no organizer, thanks to Colin.

2007-03-27 [wwp]	1.94.0cvs7

	* libical/libical/Makefile.am
	* libical/libical/icaltime.c
		Don't crash when processing broken times,
		thanks to Colin (fffast-fffix man).

2007-03-22 [colin]	1.94.0cvs6

	* src/vcal_prefs.c
	* src/vcal_prefs.h
	* src/vcalendar.c
		Don't register to Orage without user
                interaction - mainly because Orage from
                Xfce 4.4 didn't handle command line
                parameters

2007-03-22 [colin]	1.94.0cvs5

	* src/vcalendar.c
		Orage, the XFCE clock, will handle "foreign
		files". This will allow us to push our calendar
		to it. This patch does that - no effect on
		older Orage versions which don't handle it.

2007-03-21 [wwp]	1.94.0cvs4

	* configure.ac
		Bumped up the minimal Claws-Mail version this
		plugin requires.

2007-03-21 [wwp]	1.94.0cvs3

	* src/.cvsignore
	* src/vcal_folder.c
	* src/vcal_meeting_gtk.c
		Reflect changes to the log API (2.8.1cvs30).
		More files to ignore.

2007-03-16 [colin]	1.94.0cvs2

	* src/vcal_folder.c
		Fix export not being done when it should

2007-03-12 [colin]	1.94.0cvs1

	* src/vcal_folder.c
		Fix timeout handling. Patch by Pawel Pekala
